--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -12,6 +12,8 @@
       
       <label for="cook_time">Cook Time:</label>
       <input type="text" name="cook_time"></input>
+
+      <input type="submit" value="submit">
     </form>
   </body>
 </html>
